--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+h1 {
+  font-family: var(--font-grotesk), sans-serif;
+}
 body {
   background-color: black;
   color: white;
